--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,15 +1,15 @@
-.navBar_wrapper {
+/* .navBar_wrapper {
   display: flex;
   /* justify-content: space-between; */
-  align-items: baseline;
+  /* align-items: baseline; */
 
   /* text-align: center; */
   /* background-color: #f5f5f5; */
   /* padding: 20px; */
 
-  flex-direction: row;
-}
-.navbar {
+  /* flex-direction: row; */
+/* } */
+/* .navbar {
   align-items: end;
   margin-right: 13px;
 }
@@ -39,15 +39,15 @@
 }
 .navBar {
   /* width: 300px; */
-  display: flex;
+  /* display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: center; */
 
   /* padding: 30px; */
 
-  font-family: sans-serif;
-}
-.login {
+  /* font-family: sans-serif; */
+/* } */
+/* .login {
   text-decoration: none;
   font-size: 20px;
   cursor: pointer;
@@ -61,15 +61,15 @@
 .login:hover {
   transform: scale(1.1);
   color: #1d6868;
-}
+} */
 /* .logo {
   padding-left: 20px;
 } */
 
-.menuImg {
+/* .menuImg {
   width: 2em;
-}
-
+} */
+/* 
 .dropdown-item {
   cursor: pointer;
 }
@@ -81,11 +81,11 @@
 }
 @media screen and (max-width: 600px) {
   .navBar_wrapper {
-    display: none;
-  }
+    display: none; */
+  /* } */
 
-  .main_logo {
+  /* .main_logo {
     width: 60px;
     margin-top: 8px;
-  }
-}
+  } */
+/* } */ 
