--- a/src/pages/ProductsPage/productPage.css
+++ b/src/pages/ProductsPage/productPage.css
@@ -1,4 +1,4 @@
-.productPageDiv {
+/* .productPageDiv {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,4 +6,4 @@
   margin-top: 40px;
 
   color: black;
-}
+} */
